完成了 ai聊天的所有接口，集成了硅基流动的Qwen/Qwen2.5-32B-Instruct模型，实现了三种工具调用 1.添加日程 2.删除日程 3.查询日程 解决了大模型遇到没有的信息传入null值导致后端报错的问题 未添加ai上下文理解能力，目前无法感知同一会话的上下文

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,6 +59,20 @@ spring:
       max-file-size: 10MB # 单个文件最大大小
       max-request-size: 10MB # 请求最大大小
 
+# =============================================
+# LangChain4j AI 配置 (硅基流动 API)
+# =============================================
+langchain4j:
+  open-ai:
+    chat-model:
+      base-url: https://api.siliconflow.cn/v1
+      api-key: ${SILICON_API_KEY:}
+      #model-name: Qwen/Qwen2.5-7B-Instruct
+      model-name: Qwen/Qwen2.5-32B-Instruct
+      log-requests: true
+      log-responses: true
+      timeout: PT2M
+
 # 服务器配置
 server:
   port: 8080
