完成ocr功能，ai界面添加了快速添加日程的功能 完成悬浮窗ocr快速添加日程的功能 ai提示词需要重新写，对于删除大后天的全部日程之类的话他无法理解，会问用户具体什么日程 群组功能未实现 日程到来提醒未实现

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,7 +68,8 @@ langchain4j:
       base-url: https://api.siliconflow.cn/v1
       api-key: ${SILICON_API_KEY:}
       #model-name: Qwen/Qwen2.5-7B-Instruct
-      model-name: Qwen/Qwen2.5-32B-Instruct
+      #model-name: Qwen/Qwen2.5-32B-Instruct
+      model-name: Qwen/Qwen3-Next-80B-A3B-Instruct  # 工具调用不稳定，暂不使用
       log-requests: true
       log-responses: true
       timeout: PT2M
