更新了docker file 更新了生产环境的yml 修复了本地文件存储baseurl的错误

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,7 +22,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: validate  # 生产环境只验证，不自动修改表结构
+      ddl-auto: update  # 首次部署用 update，稳定后可改为 validate
     properties:
       hibernate:
         format_sql: false
