--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,18 @@ services:
       start_period: 60s
     networks:
       - speedcalendar-network
+      -
+  # Adminer 数据库管理工具
+  adminer:
+    image: adminer
+    container_name: speedcalendar-adminer
+    restart: unless-stopped
+    ports:
+      - "8081:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: mysql
+    networks:
+      - speedcalendar-network
 
 # 自定义网络
 networks:
