--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             <version>${langchain4j.version}</version>
         </dependency>
 
+        <!-- 图片压缩处理 -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.21</version>
+        </dependency>
+
         <!-- Lombok（减少样板代码） -->
         <dependency>
             <groupId>org.projectlombok</groupId>
