--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,6 +86,7 @@ verification:
     expiration: 300    # 验证码有效期（秒）：5分钟
     daily-limit: 10    # 每个手机号每天发送次数限制
     interval: 60       # 发送间隔（秒）：1分钟
+    debug-mode: true   # 本地调试模式：true-控制台打印验证码, false-实际发送短信
 
 # 文件存储配置（公共部分）
 file:
